Add ItmImages Module for configuring itm image urls

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ test.php
 site/modules/Dplus/Configs/configs
 site/modules/Dplus/DocumentManagement/config/config.json
 site/modules/Dplus/Connections/vendor
+site/modules/Dplus/ItmImages/vendor
 
 # Twig Cache
 site/templates/twig/cache/
