--- a/site/modules/Dplus/CodeTables/composer.json
+++ b/site/modules/Dplus/CodeTables/composer.json
@@ -1,17 +1,7 @@
 {
-	"name": "dplus/codes",
-	"description": "Code Table Cruds",
-	"type": "library",
-	"keywords": [ "processwire", "module" ],
-	"homepage": "http://modules.processwire.com",
-	"license": "MIT",
-	"authors": [
-		{
-			"name": "Paul Gomez",
-			"email": "pauldro952@hotmail.com"
-		}
-	],
 	"autoload": {
-		"classmap": ["src/"]
+		"psr-4": {
+			"Dplus\\Codes\\": "src/"
+		}
 	}
 }
