--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@ site/config.php
 /vendor
 test.php
 site/modules/Dplus/Configs/configs
+site/modules/Dplus/DplusDatabases/vendor
 site/modules/Dplus/DocumentManagement/config/config.json
 site/modules/Dplus/Connections/vendor
 site/modules/Dplus/ItmImages/vendor
+site/modules/Pauldro/vendor
 
 # Twig Cache
 site/templates/twig/cache/
