--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ site/modules/Dplus/DocumentManagement/config/config.json
 site/modules/Dplus/Connections/vendor
 site/modules/Dplus/ItmImages/vendor
 site/modules/Pauldro/vendor
+site/modules/Dplus/vendor
 
 # Twig Cache
 site/templates/twig/cache/
